--- a/Analysis/Analysis_CorrectItemCollected.Rmd
+++ b/Analysis/Analysis_CorrectItemCollected.Rmd
@@ -2,7 +2,9 @@
 title: 'Dissertation Analysis: Correct Items Collected'
 author: "Jamiahus Walton"
 date: "5/7/2019"
-output: html_document
+output: 
+  html_document:
+    toc: true
 editor_options:
   chunk_output_type: inline
 csl: apa.csl
